# neurow-activeted31

./: README.md
neurow-activeted31-final/neurow-activeted31/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.py
neurow-activeted31-final/neurow-activeted31/app/: container.py  factory.py  main.py
neurow-activeted31-final/neurow-activeted31/app/api/: dependencies.py
neurow-activeted31-final/neurow-activeted31/app/api/routes/: contact.py  (+1 more)
neurow-activeted31-final/neurow-activeted31/app/controllers/: contact_controller.py
neurow-activeted31-final/neurow-activeted31/app/core/: config.py  error_handlers.py  exceptions.py  logging.py  security.py
neurow-activeted31-final/neurow-activeted31/app/middleware/: request_context.py
neurow-activeted31-final/neurow-activeted31/app/repositories/: json_file_repository.py  metrics_repository.py  rate_limit_repository.py
neurow-activeted31-final/neurow-activeted31/app/schemas/: common.py  contact.py  metrics.py
neurow-activeted31-final/neurow-activeted31/app/services/: ai_service.py  contact_service.py  email_service.py  rate_limit_service.py
neurow-activeted31-final/neurow-activeted31/frontend/: index.html
neurow-activeted31-final/neurow-activeted31/frontend/static/: app.js  styles.css
neurow-activeted31-final/neurow-activeted31/postman/: developer-landing-api.postman_collection.json
neurow-activeted31-final/neurow-activeted31/tests/: conftest.py  test_ai_service.py  test_api.py  test_email_service.py  test_repositories_and_config.py
